tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__NetheriteMateria-9dt9i3MYRa-NB6KROtAYFA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8293455332711077908,
  "prerequisites": [
    1212,
    2029
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've completed the Netherite line and successfully set up your Mk1 Fusion Reactor, you finally have access to §5§lBoron Plasma§r, which is necessary for creating all of the different §4§lNetherite materials§r. \n\nThese will be important for the rest of the game and are used often in a variety of items and materials, so it's important to make upgrades to your line both in terms of power and recipe usage as you continue to progress through the tiers.\n\n[note]UHV power and the QFT are the biggest milestones in terms of recipe upgrades for the line.[/note]\n\n[warn]You must use a High-Current Industrial (Plasma) Arc Furnace, a regular one isn't powerful enough.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lNetherite Materials",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1212,
    2029
  ],
  "rewards": [],
  "tasks": []
}
