tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__NetheriteNanopar-P_nO8frbRM2c-MLKAaJUkw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 18076117176668017811,
  "prerequisites": [
    12782704186218069608
  ],
  "properties": {
    "auto_claim": false,
    "desc": "§4Netherite Nanoparticles§r can be made from §5§lMacerating§r your newly attained Brittle Netherite Scraps.\n\n[note]Almost seems too easy doesn't it?[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lNetherite Nanoparticles",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12782704186218069608
  ],
  "rewards": [],
  "tasks": []
}
