tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__NetheriteScrapSe-01C00SMsRUyKUD2zJht8tA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2534476883661913268,
  "prerequisites": [
    14799188261435364006,
    2910818284486632452
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally, we can start putting some of that Netherite Scrap to use!\n\nCombine the Hot Neterite Scrap and some Rich Nether Waste in an §5§lAutoclave§r for a §2§l10%§r chance at getting a §4Netherite Scrap Seed§r. \n\nNotably, as mentioned before, the Netherite Scrap gets recycled during this recipe so it only really costs Rich Nether Waste to create. Given the low probability, you want the recipe to be running as often as possible.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lNetherite Scrap Seed",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    14799188261435364006,
    2910818284486632452
  ],
  "rewards": [],
  "tasks": []
}
