tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__NetherrackMillin-XDZFjGB9RlWlrW0mHFoL0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6952790731091741650,
  "prerequisites": [
    3144,
    13256433337557620598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the Netherite line comes the first mandatory usage of the §5§lIsamill Grinding Machine§r, which you will need to create§4 Milled Netherrack§r. You will require a lot of this so be prudent in keeping up with your netherrack and milling ball production. \n\nFor netherrack, the best methods of production are through the rock breaker using glowstone dust, or through compressing netherrack dust that you may have obtained a stash of through mining.\n\nFor the milling balls, you have two options:\n\n§2§l- Soapstone ->§r§2 Cheaper, 50% as effective as Alumina\n§3§l- Alumina ->§r§3 More Expensive, 2x as effective as Soapstone",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lNetherrack Milling",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3144,
    13256433337557620598
  ],
  "rewards": [],
  "tasks": []
}
